# COMP.CE.470-Video-Compression

./: .gitignore  .gitmodules
ex9-deblock/: CMakeLists.txt  Videocourse_deblock  ex_9.cpp
exercise1/: CMakeLists.txt  fixed_point_math  main.cpp
exercise2/: BD-rate.xlsm
exercise6/: CMakeLists.txt  ex_6.cpp  helper.cpp  winnie_the_pooh.txt
